<resources>
    <string name="app_name">BC-Prototype-1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="Keepbird">จับนก</string>
    <string name="SearchPostion">ค้นหาตำแหน่งของนก</string>
    <string name="BirdsData">ข้อมูลนก</string>
    <string name="collection">นกสะสม</string>
    <string name="TakePhoto">ถ่ายภาพนก</string>
    <string name="KeepVirtualBirds">จับนกเสมือน</string>
    <string name="BirdPhoto">ภาพถ่ายนก</string>
    <string name="VirtualBird">นกเสมือน</string>
    <string name="title_activity_keepbird">จับนก</string>
    <string name="title_activity_collection">นกสะสม</string>
    <string name="title_activity_birds_data">ข้อมูลของนก</string>
    <color name="blue1">#2196F3</color>
    <color name="blue2">#448AFF</color>
    <string name="title_activity_bird_map_actitvity">BirdMapActitvity</string>
    <string name="title_activity_map_actitvity">Birds Collection</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu">เมนู</string>
    <string name="app_newname">ชุมชนคนรักนก</string>
    <string name="xv">aerfsad</string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_virtual_bird">VirtualBirdActivity</string>
    <string name="title_activity_photo">PhotoActivity</string>
    <string name="buengsrithan">บึงสีฐาน</string>
    <string name="pramong">บ่อน้ำหมวด หมวดประมง คณะเกษตรศาสตร์</string>
    <string name="farm">ทุ่งหญ้าเลี้ยงสัตว์ คณะเกษตรศาสตร์</string>
    <string name="title_activity_bung_sri_tan__birds">BungSriTan_Birds</string>
    <string name="title_activity_mhudpramong">Mhudpramong</string>
    <string name="title_activity_framimg_area__birds">FramimgArea_Birds</string>


</resources>
