<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wattana.bc_prototype_1.CollectionActivity">
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu"
        android:orderInCategory="100"
        app:showAsAction="never">
        <menu>

            <item
                android:id="@+id/menu_keep"
                android:title="@string/KeepVirtualBirds"
                >
            </item>
            <item
                android:id="@+id/menu_map"
                android:title="@string/SearchPostion"
                >
            </item>
            <item
                android:id="@+id/menu_birddata"
                android:title="@string/BirdsData"

                >
            </item>

        </menu>


    </item>
</menu>
