<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/Keepbird"
        android:id="@+id/btnKeepbird"
        android:singleLine="false"
        android:onClick="keepBirds"
        android:nestedScrollingEnabled="true"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_above="@+id/btnSearchpossition"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/SearchPostion"
        android:id="@+id/btnSearchpossition"
        android:textStyle="bold"
        android:textSize="25sp"
        android:onClick="openMap"
        android:nestedScrollingEnabled="true"
        android:layout_above="@+id/btnBirdData"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/BirdsData"
        android:id="@+id/btnBirdData"
        android:onClick="birdData"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_above="@+id/btnCollection"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/collection"
        android:id="@+id/btnCollection"
        android:onClick="collection"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
